<resources>
	<string name="app_name">Graphic Era Android</string>
	<string name="graphic_era_hill_university_image">Graphic Era Hill University Image</string>
	<string name="graphic_era_hill_university_logo">Graphic Era Hill University Logo</string>
	<string name="login">LOGIN</string>
	<string name="student_id">Student ID</string>
	<string name="student_password">Student Password</string>
	<string name="remember_student_id">Remember Student ID</string>
	<string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
	<string name="title_home">Home</string>
	<string name="title_dashboard">Dashboard</string>
	<string name="title_downloads">Downloads</string>
	<string name="title_settings">Settings</string>
	<string name="enter_all_the_fields">Enter All The Fields!</string>

	<!-- speakable text for views -->
	<string name="speakable">Speakable</string>

	<!-- dummy texts for textview -->
	<string name="student_image">Student Image</string>
	<string name="samarthya_bararia">Dummy Name</string>
	<string name="_10001">00000</string>
	<string name="samarthya_gmail">dummy@personal.com</string>
	<string name="samarthya_csemail">dummy@college.com</string>
	<string name="samarthya_phone">+91–1234567890</string>

	<!-- resources for personal details table in HomeFragment -->
	<string name="father_name">Father\'s Name</string>
	<string name="mother_name">Mother\'s Name</string>
	<string name="date_of_birth">DOB</string>
	<string name="college">College</string>
	<string name="course">Course</string>
	<string name="branch">Branch</string>
	<string name="semester">Semester</string>
	<string name="section">Section</string>
	<string name="class_roll_no">Class Roll No.</string>
	<string name="intermediate">Intermediate %</string>
	<string name="highschool">High School %</string>
	<string name="admission_date">Admission Date</string>
	<string name="personal_details">Personal Details</string>

	<!-- resources for change password and logout in Settings Fragment -->
	<string name="change_password">Change Password</string>
	<string name="logout">Logout</string>
	<string name="old_password">Old Password</string>
	<string name="new_password">New Password</string>
	<string name="confirmation">Confirmation</string>
	<string name="enter_new_password">Enter New Password</string>
	<string name="enter_new_password_again">Enter New Password Again</string>
	<string name="submit">Submit</string>
	<string name="password_changed_successfully">Password\nChanged\nSuccessfully</string>
	<string name="select_the_semester">Select the Semester</string>
	<string name="download_exam_results">Download Exam Results</string>
	<string name="download_fee_receipts">Download Fee Receipts</string>
	<string name="download_notices_updates">Download Notices/Updates</string>
	<string name="download_result">Download Result</string>

	<!-- resources for spinner and other things in DashboardFragment -->
	<string-array name="spinnerSelectSemester">
		<item>1</item>
		<item>2</item>
		<item>3</item>
		<item>4</item>
		<item>5</item>
		<item>6</item>
		<item>7</item>
		<item>8</item>
	</string-array>

	<!-- resources for text view in DownloadsFragment -->
	<string name="download_successful">
		Download successful, the file can be viewed by clicking on the notification!
	</string>

	<string name="download_unsuccessful">
		Download unsuccessful, the file has not been published yet!
	</string>

<!--	resources for dashboard fields-->
	<string name="dashboard_field">Dashboard Field</string>
	<string name="dashboard_for_semester">Dashboard for Semester:</string>
	<string name="dashboard_value">Dashboard Value</string>
	<string name="attendance">Attendance</string>
	<string name="sgpa">SGPA</string>
	<string name="fees">Fees</string>
	<string name="dashboard_key_1">Dashboard Key 1</string>
	<string name="dashboard_key_2">Dashboard Key 2</string>
	<string name="dashboard_value_1">Dashboard Value 1</string>
	<string name="dashboard_value_2">Dashboard Value 2</string>
	<string name="rupee_symbol">\u20B9</string>
	<string name="please_wait">Please Wait…</string>

</resources>