<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/mobile_navigation"
	app:startDestination="@+id/navigation_home">

	<fragment
		android:id="@+id/navigation_home"
		android:name="com.samarthya.gehuapplication.ui.home.HomeFragment"
		android:label="@string/title_home"
		tools:layout="@layout/fragment_home" />

	<fragment
		android:id="@+id/navigation_dashboard"
		android:name="com.samarthya.gehuapplication.ui.dashboard.DashboardFragment"
		android:label="@string/title_dashboard"
		tools:layout="@layout/fragment_dashboard" />

	<fragment
		android:id="@+id/navigation_downloads"
		android:name="com.samarthya.gehuapplication.ui.downloads.DownloadsFragment"
		android:label="@string/title_downloads"
		tools:layout="@layout/fragment_downloads" />
	<fragment
		android:id="@+id/navigation_settings"
		android:name="com.samarthya.gehuapplication.ui.settings.SettingsFragment"
		android:label="@string/title_settings"
		tools:layout="@layout/fragment_settings" />

</navigation>