<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/primary_container"
	tools:context=".ui.home.HomeFragment">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:contentDescription="@string/speakable"
		android:layout_marginBottom="?attr/actionBarSize"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<androidx.cardview.widget.CardView
				android:id="@+id/cardViewStudentImage"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="25dp"
				app:cardCornerRadius="100dp"
				app:cardElevation="16dp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent">

				<ImageView
					android:id="@+id/ivStudentImage"
					android:layout_width="150dp"
					android:layout_height="150dp"
					android:contentDescription="@string/student_image"
					android:scaleType="fitXY"
					android:src="@drawable/ic_person_no_image_24dp" />

			</androidx.cardview.widget.CardView>

			<TextView
				android:id="@+id/tvStudentName"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:layout_marginTop="20dp"
				android:text="@string/samarthya_bararia"
				android:textColor="@color/on_primary_container"
				android:textSize="18sp"
				android:textStyle="bold"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/cardViewStudentImage" />

			<TextView
				android:id="@+id/tvStudentId"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:layout_marginTop="10dp"
				android:text="@string/_10001"
				android:textColor="@color/primary"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/tvStudentName" />

			<TextView
				android:id="@+id/tvStudentPersonalEmail"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:layout_marginTop="5dp"
				android:text="@string/samarthya_gmail"
				android:textColor="@color/primary"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/tvStudentId" />

			<TextView
				android:id="@+id/tvStudentCollegeEmail"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dp"
				android:gravity="center"
				android:text="@string/samarthya_csemail"
				android:textColor="@color/primary"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/tvStudentPersonalEmail" />

			<TextView
				android:id="@+id/tvStudentPhoneNumber"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dp"
				android:gravity="center"
				android:text="@string/samarthya_phone"
				android:textColor="@color/primary"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/tvStudentCollegeEmail" />

			<ImageView
				android:id="@+id/ivPersonalEmail"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="8dp"
				android:contentDescription="@string/samarthya_gmail"
				android:src="@drawable/ic_personal_email_24dp"
				app:layout_constraintBottom_toBottomOf="@+id/tvStudentPersonalEmail"
				app:layout_constraintEnd_toStartOf="@+id/tvStudentPersonalEmail"
				app:layout_constraintTop_toTopOf="@+id/tvStudentPersonalEmail" />

			<ImageView
				android:id="@+id/ivCollegeEmail"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="8dp"
				android:contentDescription="@string/samarthya_csemail"
				android:src="@drawable/ic_college_email_24dp"
				app:layout_constraintBottom_toBottomOf="@+id/tvStudentCollegeEmail"
				app:layout_constraintEnd_toStartOf="@+id/tvStudentCollegeEmail"
				app:layout_constraintTop_toTopOf="@+id/tvStudentCollegeEmail" />

			<ImageView
				android:id="@+id/ivPhoneNumber"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/ic_phone_number_24dp"
				android:contentDescription="@string/samarthya_phone"
				android:layout_marginEnd="8dp"
				app:layout_constraintBottom_toBottomOf="@+id/tvStudentPhoneNumber"
				app:layout_constraintEnd_toStartOf="@+id/tvStudentPhoneNumber"
				app:layout_constraintTop_toTopOf="@+id/tvStudentPhoneNumber" />

			<ImageView
				android:id="@+id/ivStudentId"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="8dp"
				android:contentDescription="@string/_10001"
				android:src="@drawable/ic_student_id_24dp"
				app:layout_constraintBottom_toBottomOf="@+id/tvStudentId"
				app:layout_constraintEnd_toStartOf="@+id/tvStudentId"
				app:layout_constraintTop_toTopOf="@+id/tvStudentId"
				tools:ignore="ImageContrastCheck" />

			<TextView
				android:id="@+id/tvFatherName"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dp"
				android:gravity="center"
				android:paddingTop="5dp"
				android:paddingBottom="5dp"
				android:text="@string/father_name"
				android:textColor="#795548"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/tvStudentPersonalDetails" />

			<TextView
				android:id="@+id/tvMotherName"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:paddingTop="5dp"
				android:paddingBottom="5dp"
				android:text="@string/mother_name"
				android:textColor="#795548"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/tvFatherName" />

			<TextView
				android:id="@+id/tvDOB"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:paddingTop="5dp"
				android:paddingBottom="5dp"
				android:text="@string/date_of_birth"
				android:textColor="#795548"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/tvMotherName" />

			<TextView
				android:id="@+id/tvCollege"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:paddingTop="5dp"
				android:paddingBottom="5dp"
				android:text="@string/college"
				android:textColor="#795548"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/tvDOB" />

			<TextView
				android:id="@+id/tvCourse"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:paddingTop="5dp"
				android:paddingBottom="5dp"
				android:text="@string/course"
				android:textColor="#795548"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/tvCollege" />

			<TextView
				android:id="@+id/tvBranch"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:paddingTop="5dp"
				android:paddingBottom="5dp"
				android:text="@string/branch"
				android:textColor="#795548"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/tvCourse" />

			<TextView
				android:id="@+id/tvSemester"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:paddingTop="5dp"
				android:paddingBottom="5dp"
				android:text="@string/semester"
				android:textColor="#795548"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/tvBranch" />

			<TextView
				android:id="@+id/tvSection"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:paddingTop="5dp"
				android:paddingBottom="5dp"
				android:text="@string/section"
				android:textColor="#795548"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/tvSemester" />

			<TextView
				android:id="@+id/tvClassRollNo"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:paddingTop="5dp"
				android:paddingBottom="5dp"
				android:text="@string/class_roll_no"
				android:textColor="#795548"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/tvSection" />

			<TextView
				android:id="@+id/tvIntermediate"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:paddingTop="5dp"
				android:paddingBottom="5dp"
				android:text="@string/intermediate"
				android:textColor="#795548"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/tvClassRollNo" />

			<TextView
				android:id="@+id/tvHighschool"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:paddingTop="5dp"
				android:paddingBottom="5dp"
				android:text="@string/highschool"
				android:textColor="#795548"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/tvIntermediate" />

			<TextView
				android:id="@+id/tvAdmissionDate"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:paddingTop="5dp"
				android:paddingBottom="20dp"
				android:text="@string/admission_date"
				android:textColor="#795548"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/tvHighschool" />

			<TextView
				android:id="@+id/tvStudentPersonalDetails"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:text="@string/personal_details"
				android:textColor="@color/primary"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/tvStudentPhoneNumber" />

			<ImageView
				android:id="@+id/ivPersonalDetails"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="8dp"
				android:contentDescription="@string/personal_details"
				android:src="@drawable/ic_personal_details_24dp"
				app:layout_constraintBottom_toBottomOf="@+id/tvStudentPersonalDetails"
				app:layout_constraintEnd_toStartOf="@+id/tvStudentPersonalDetails"
				app:layout_constraintTop_toTopOf="@+id/tvStudentPersonalDetails" />

		</androidx.constraintlayout.widget.ConstraintLayout>

	</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>