<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:paddingBottom="20dp"
	android:background="@color/on_primary_container">

	<TextView
		android:id="@+id/dashboardField"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:text="@string/dashboard_field"
		android:textColor="@color/primary_container"
		android:textSize="17sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/dashboardKey1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:layout_marginStart="20dp"
		android:text="@string/dashboard_key_1"
		android:textColor="@color/primary_container"
		android:textSize="14sp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/dashboardField" />

	<TextView
		android:id="@+id/dashboardKey2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:layout_marginEnd="20dp"
		android:text="@string/dashboard_key_2"
		android:textColor="@color/primary_container"
		android:textSize="14sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/dashboardField" />

	<TextView
		android:id="@+id/dashboardValue1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/dashboard_value_1"
		android:layout_marginStart="20dp"
		android:textColor="@color/primary_container"
		android:textSize="14sp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/dashboardKey1" />

	<TextView
		android:id="@+id/dashboardValue2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="20dp"
		android:text="@string/dashboard_value_2"
		android:textColor="@color/primary_container"
		android:textSize="14sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/dashboardKey2" />

</androidx.constraintlayout.widget.ConstraintLayout>