<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/primary_container"
	tools:context=".ui.downloads.DownloadsFragment">

	<Spinner
		android:id="@+id/spinnerSelectSemesterDownloads"
		android:layout_width="80dp"
		android:layout_height="wrap_content"
		android:contentDescription="@string/speakable"
		android:minHeight="48dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/tvSelectSemesterDownloads"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/select_the_semester"
		android:textColor="@color/on_primary_container"
		android:textSize="20sp"
		app:layout_constraintBottom_toBottomOf="@+id/spinnerSelectSemesterDownloads"
		app:layout_constraintEnd_toStartOf="@+id/spinnerSelectSemesterDownloads"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@+id/spinnerSelectSemesterDownloads" />

	<Button
		android:id="@+id/btnDownloadExamResult"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="30dp"
		android:layout_marginTop="60dp"
		android:layout_marginEnd="30dp"
		android:text="@string/download_exam_results"
		android:background="@drawable/login_button"
		android:textColor="@color/primary_container"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tvSelectSemesterDownloads" />

	<Button
		android:id="@+id/btnDownloadFeeReceipt"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="30dp"
		android:layout_marginTop="20dp"
		android:layout_marginEnd="30dp"
		android:text="@string/download_fee_receipts"
		android:background="@drawable/login_button"
		android:textColor="@color/primary_container"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/btnDownloadExamResult" />

	<Button
		android:id="@+id/btnDownloadNoticeUpdate"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="30dp"
		android:layout_marginTop="20dp"
		android:layout_marginEnd="30dp"
		android:text="@string/download_notices_updates"
		android:background="@drawable/login_button"
		android:textColor="@color/primary_container"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/btnDownloadFeeReceipt" />

	<TextView
		android:id="@+id/tvFileDownloadStatus"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:visibility="gone"
		android:layout_marginStart="30dp"
		android:layout_marginEnd="30dp"
		android:text="@string/download_result"
		android:textColor="@color/success"
		android:textSize="17sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/btnDownloadNoticeUpdate" />

</androidx.constraintlayout.widget.ConstraintLayout>